# exploding-gumbo-and-terrain

./: .gitignore  CMakeLists.txt  README.md  Scene  Scene.cont  Scene.cpp  Scene.eval  Scene.frag  Scene.geom  Scene.h  Terrain  Terrain.cpp  build-and-run.sh
PatchFiles/: PatchVerts_Gumbo.txt  PatchVerts_Teapot.txt
Terrain/: Terrain  Terrain.cont  Terrain.cpp  Terrain.eval  Terrain.frag  Terrain.vert  loadTGA.h
res/: snow.tga  water.tga
shaders/: Floor.frag  Floor.vert  Scene.frag  Scene.geom  Scene.tesc  Scene.tese  Scene.vert  Terrain.frag  Terrain.geom  Terrain.tesc  Terrain.tese  Terrain.vert
